--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@ant-design/icons": "^5.1.4",
     "@ant-design/pro-components": "^2.6.4",
     "antd": "^5.6.4",
+    "autoprefixer": "^10.4.14",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
